# heft

./: .gitignore  .ocamlformat  dune-project  heft.opam  holinone.opam  lang.hol  lang_sexp.hol  note.md
.github/workflows/: main.yml
docs/: aesop_notes.md  derived_rules.md  hol.md  note.md  papers.md  redesign.md  roadmap.md  tactics.md
lib/: ast.ml  derived.ml  derived_test.ml  dune  elaborator.ml  elaborator_test.ml  heft.ml  holinone.ml  inductive.ml  inductive_test.ml  inductive_theorems.ml  inductive_theorems_test.ml  interpret.ml  kernel.ml  kernel.mli  kernel_test.ml  lexer.ml  lexer.mll  parse.ml  parser.ml  parser.mly  parser_driver.ml  printing.ml  proof.ml  reflection.ml  rewrite.ml  rules.ml  spec.v  tactic.ml  tactic_test.ml  tast.ml  theorems.ml  theories.ml  util.ml
test/: derived_test.ml  dune  effects_test.ml  elaborator_test.ml  induction.lean  inductive_test.ml  kernel_test.ml  lang.hol  lexer_test.ml  list.hol  parser_test.ml  rewrite_test.ml  spec.v  tactic_test.ml  tast_test.ml
test_programs/: list.hol
